# PortfolioDapps

./: README  README.md
battelship_contract/: Cargo.toml  lib.rs
battelship_ink/: lib.rs
cross_word/: Cargo.toml  README.md  lib.rs
donation_ink/: Cargo.toml  lib.rs
greeting/: Cargo.toml
hotel/: Cargo.toml  lib.rs
report-suspecious-activity/: Cargo.toml
report-suspecious-activity/contracts/suspicious_activity/: Cargo.toml  lib.rs
report-suspecious-activity/contracts/suspicious_activity/logics/: Cargo.toml  lib.rs
report-suspecious-activity/contracts/suspicious_activity/logics/impls/report/: mod.rs  report.rs  types.rs
report-suspecious-activity/contracts/suspicious_activity/logics/traits/: report.rs
todo_list/: Cargo.toml  README.md  lib.rs
todolistdapp/: README
todolistdapp/todo-list-frontend/: package-lock.json  package.json
todolistdapp/todo_list/: Cargo.toml  lib.rs
twitter_ink/: Cargo.toml  README.md  lib.rs
voting-dapp/: package-lock.json  package.json
voting-dapp/components/: abi.ts
voting_II/: Cargo.toml  lib.rs
voting_dapp/: Cargo.toml  lib.rs
voting_ink/: README.md  lib.rs
